--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.samuelweb</groupId>
 	<artifactId>java-pdf-signature</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
     <name>Java_Pdf_Signature</name>
     <description>Projeto Para implementação do Java-Pdf-Signature Utilizando PdfBox da Apache.</description>
     <url>https://github.com/Samuel-Oliveira/Java_Pdf_Signature</url>
@@ -20,7 +19,7 @@
         <url>https://github.com/Samuel-Oliveira/Java_Pdf_Signature</url>
         <connection>scm:git:git@github.com:Samuel-Oliveira/Java_Pdf_Signature.git</connection>
         <developerConnection>scm:git:git@github.com:Samuel-Oliveira/Java_Pdf_Signature.git</developerConnection>
-        <tag>java_pdf_signature-1.0</tag>
+        <tag>java-pdf-signature-1.0</tag>
     </scm>
 
     <properties>
