--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
     <groupId>br.com.swconsultoria</groupId>
 	<artifactId>java-pdf-signature</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <name>Java_Pdf_Signature</name>
     <description>Projeto Para implementação do Java-Pdf-Signature Utilizando PdfBox da Apache.</description>
     <url>https://github.com/Samuel-Oliveira/Java_Pdf_Signature</url>
